--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -11,10 +11,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@zendeskgarden/css-bedrock@7.0.21,npm/@zendeskgarden/css-utilities@4.3.0">
 </head>
 <body>
-  <h2 class="u-semibold u-fs-xl">Hi there, Aug Test</h2>
-  <p>I am dev-2</p>
-  <p>This is dev-3</p>
-  <p>test hotfix</p>
+  <h2 class="u-semibold u-fs-xl">Hi there, CI/CD</h2>
+  <p>Code cleaned</p> 
   <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
   <script>
     // Initialise Apps framework client. See also:
