--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -15,6 +15,7 @@
   <p>Code cleaned</p>
   <p>Test workflow</p>  
   <p>Hotfix</p>
+  <p>Changes for DI-1111</p>
   <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
   <script>
     // Initialise Apps framework client. See also:
